:sparkles: add routes to another pages

--- a/assets/stylesheet/stylesheet.scss
+++ b/assets/stylesheet/stylesheet.scss
@@ -21,6 +21,9 @@ $h3-headline: 24px;
 $h4-headline: 18px;
 $h5-headline: 16px;
 
+// Subtitle Color
+$subtitle-color: #777777;
+
 // Set your colors
 $primary: #FF725F;
 $primary-invert: findColorInvert($primary);
